src/objects/Checklist__c.object
<CustomObject>
    <description>Object for the creation of checklists for managing events</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Template_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Template Event</label>
        <referenceTo>Template_Event__c</referenceTo>
        <relationshipLabel>Checklists</relationshipLabel>
        <relationshipName>Checklists</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Checklist</label>
    <nameField>
        <label>Checklist Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Checklists</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>